# mini_data_capture

./: .gitignore  .gitmodules  Ardunio.sch  CMakeLists.txt  LICENSE.txt  README.md  appveyor.yml  bed_sensor-rescue.lib  decode.py  fp-info-cache  micro_logger-cache.lib  micro_logger.bak  micro_logger.kicad_pcb  micro_logger.kicad_pcb-bak  micro_logger.sch  qml.qrc
app/: Application.cpp  Application.h  FileDecoder.cpp  FileDecoder.h  FileUpload.cpp  FileUpload.h  application.ui  main.cpp
firmware/: SConstruct  main.cpp
hardware/: .~lock.micro_logger.csv#  Ardunio.bak  Ardunio.sch  _autosave-micro_logger.kicad_pcb  bed_sensor-cache.lib  bed_sensor.kicad_pcb-bak  bed_sensor.net  fp-info-cache  micro_logger-cache.lib  micro_logger-rescue.lib  micro_logger.bak  micro_logger.csv  micro_logger.kicad_pcb  micro_logger.kicad_pcb-bak  micro_logger.net  micro_logger.pro  micro_logger.sch  sym-lib-table
hardware/components/: 1734248-5.kicad_mod  ICM-20948.kicad_mod  ICM-20948.lib  gait_logo.kicad_mod
